--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
@@ -17,25 +17,47 @@
       bind:systemPermissionDenied="passEvent"
     />
   </view>
-  <view class="component-section" wx:if="{{type === 'live'}}">
-    <view class="ptz-panel-wrap">
-      <view class="ptz-panel">
-        <view class="ptz-controls">
-          <view class="ptz-controls-top">
-            <view class="ptz-position">
-              <view wx:for="{{ptzBtns}}" wx:key="name" class="ptz-dir ptz-{{item.name}}">
-                <view class="ptz-btn"
-                  data-cmd="{{item.cmd}}"
-                  bind:touchstart="controlDevicePTZ"
-                  bind:touchend="releasePTZBtn"
-                  bind:touchcancel="releasePTZBtn"
-                >
-                  <view class="ptz-icon arrow-{{item.name}} {{ptzCmd === item.cmd ? 'press' : ''}}"></view>
+  <view wx:if="{{type === 'live'}}">
+    <view wx:if="{{needDuplex}}" class="component-section">
+      <view class="component-section-title">双向音视频</view>
+      <iot-p2p-common-pusher
+        id="{{pusherId}}"
+        enableCamera="{{true}}"
+        bind:pusherStateChange="onPusherStateChange"
+        bind:pushError="onPusherPushError"
+      />
+      <view>voiceType: {{voiceType}}</view>
+      <view>voiceState: {{voiceState}}</view>
+      <view class="group-button-area">
+        <button bindtap="startVoice" data-voice-type="DuplexVideo" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !pusherReady || (voiceState && voiceState !== 'error')}}">
+          开始
+        </button>
+        <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !voiceState || voiceState === 'error'}}">
+          挂断
+        </button>
+      </view>
+    </view>
+    <view class="component-section">
+      <view class="component-section-title">PTZ控制</view>
+      <view class="ptz-panel-wrap">
+        <view class="ptz-panel">
+          <view class="ptz-controls">
+            <view class="ptz-controls-top">
+              <view class="ptz-position">
+                <view wx:for="{{ptzBtns}}" wx:key="name" class="ptz-dir ptz-{{item.name}}">
+                  <view class="ptz-btn"
+                    data-cmd="{{item.cmd}}"
+                    bind:touchstart="controlDevicePTZ"
+                    bind:touchend="releasePTZBtn"
+                    bind:touchcancel="releasePTZBtn"
+                  >
+                    <view class="ptz-icon arrow-{{item.name}} {{ptzCmd === item.cmd ? 'press' : ''}}"></view>
+                  </view>
                 </view>
-              </view>
-              <view class="ptz-cricle">
-                <view class="voice-btn" bindtap="toggleVoice" data-recorder-cfg="1-8000-16000">
-                  <view class="voice-icon {{voiceState === 'sending' ? 'press' : ''}}">{{voiceState}}</view>
+                <view class="ptz-cricle">
+                  <view wx:if="{{!needDuplex}}" class="voice-btn" bindtap="toggleVoice" data-voice-type="{{needPusher ? 'Pusher' :'Recorder'}}" data-recorder-cfg="1-8000-16000">
+                    <view class="voice-icon {{voiceState === 'sending' ? 'press' : ''}}"><text>{{voiceType+'\n'+voiceState}}</text></view>
+                  </view>
                 </view>
               </view>
             </view>
@@ -43,124 +65,143 @@
         </view>
       </view>
     </view>
-  </view>
-  <view class="component-section" wx:if="{{type === 'live'}}">
-    <view class="component-section-title">播放控制</view>
-    <view class="group-button-area">
-      <button bindtap="pauseLive" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || playerPaused}}">
-        暂停
-      </button>
-      <button bindtap="resumeLive" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPaused}}">
-        继续
-      </button>
+    <!-- <view class="component-section">
+      <view class="component-section-title">播放控制</view>
+      <view class="group-button-area">
+        <button bindtap="pauseLive" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || playerPaused}}">
+          暂停
+        </button>
+        <button bindtap="resumeLive" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPaused}}">
+          继续
+        </button>
+      </view>
+    </view> -->
+    <view class="component-section">
+      <view class="component-section-title">切换清晰度</view>
+      <view class="group-button-area">
+        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=super" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          超清
+        </button>
+        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=high" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          高清
+        </button>
+        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=standard" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          标清
+        </button>
+      </view>
+    </view>
+    <view wx:if="{{!needDuplex}}" class="component-section">
+      <view class="component-section-title">语音对讲</view>
+      <view wx:if="{{needPusher}}">
+        <iot-p2p-common-pusher
+          id="{{pusherId}}"
+          enableCamera="{{false}}"
+          bind:pusherStateChange="onPusherStateChange"
+          bind:pushError="onPusherPushError"
+          style="display: none"
+        />
+        <view>pusherReady: {{pusherReady}}</view>
+      </view>
+      <view>voiceType: {{voiceType}}</view>
+      <view>voiceState: {{voiceState}}</view>
+      <view class="group-button-area">
+        <button bindtap="startVoice" data-recorder-cfg="1-8000-16000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState && voiceState !== 'error')}}">
+          单通道录音
+        </button>
+        <button bindtap="startVoice" data-recorder-cfg="2-44100-192000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState && voiceState !== 'error')}}">
+          双通道录音
+        </button>
+        <button wx:if="{{needPusher}}" bindtap="startVoice" data-voice-type="Pusher" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !pusherReady || (voiceState && voiceState !== 'error')}}">
+          Pusher
+        </button>
+        <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !voiceState || voiceState === 'error'}}">
+          挂断
+        </button>
+      </view>
+    </view>
+    <view class="component-section">
+      <view class="component-section-title">内置信令</view>
+      <view class="group-button-area">
+        <button bindtap="sendInnerCommand" data-cmd-name="getLiveStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          获取直播拉流状态
+        </button>
+        <button bindtap="sendInnerCommand" data-cmd-name="getVoiceStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          获取对讲状态
+        </button>
+      </view>
     </view>
   </view>
-  <view class="component-section" wx:if="{{type === 'live'}}">
-    <view class="component-section-title">切换清晰度</view>
-    <view class="group-button-area">
-      <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=super" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        超清
-      </button>
-      <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=high" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        高清
-      </button>
-      <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=standard" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        标清
-      </button>
+  <view wx:if="{{type === 'playback'}}">
+    <view class="component-section">
+      <view class="component-section-title">当前录像</view>
+      <view class="text-box">
+        <text>{{playerPlaybackTimeLocaleStr}}</text>
+        <text wx:if="{{playerPlaybackTime}}" style="margin-left: 20rpx;">({{playbackDuration / 1000}}s)</text>
+      </view>
+      <slider min="0" max="{{playbackDuration}}" value="{{sliderProgress}}" bindchange="sliderProgressChange" show-value  disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess}}"/>
+      <view class="group-button-area">
+        <button bindtap="getPlaybackProgress" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess}}">
+          获取进度
+        </button>
+        <!-- <button bindtap="seekPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess}}">
+          Seek
+        </button> -->
+        <button bindtap="pausePlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess || playerPaused}}">
+          暂停
+        </button>
+        <button bindtap="resumePlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !playerPaused}}">
+          继续
+        </button>
+      </view>
+      <view class="text-box">
+        <text>{{playbackProgressStr}}</text>
+      </view>
     </view>
-  </view>
-  <view class="component-section" wx:if="{{type === 'live'}}">
-    <view class="component-section-title">语音对讲</view>
-    <view>voiceState: {{voiceState}}</view>
-    <view class="group-button-area">
-      <button bindtap="startVoice" data-recorder-cfg="1-8000-16000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState === 'starting' || voiceState === 'sending')}}">
-        单通道录音
-      </button>
-      <button bindtap="startVoice" data-recorder-cfg="2-44100-192000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState === 'starting' || voiceState === 'sending')}}">
-        双通道录音
-      </button>
-      <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !voiceState || voiceState === 'error'}}">
-        挂断
-      </button>
-    </view>
-  </view>
-  <view class="component-section" wx:if="{{type === 'playback'}}">
-    <view class="component-section-title">当前录像</view>
-    <view class="text-box">
-      <text>{{playerPlaybackTimeLocaleStr}}</text>
-      <text wx:if="{{playerPlaybackTime}}" style="margin-left: 20rpx;">({{playbackDuration / 1000}}s)</text>
-    </view>
-    <slider min="0" max="{{playbackDuration}}" value="{{sliderProgress}}" bindchange="sliderProgressChange" show-value  disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess}}"/>
-    <view class="group-button-area">
-      <button bindtap="getPlaybackProgress" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess}}">
-        获取进度
-      </button>
-      <!-- <button bindtap="seekPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess}}">
-        Seek
-      </button> -->
-      <button bindtap="pausePlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !streamSuccess || playerPaused}}">
-        暂停
-      </button>
-      <button bindtap="resumePlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime || !playerPaused}}">
-        继续
-      </button>
-    </view>
-    <view class="text-box">
-      <text>{{playbackProgressStr}}</text>
-    </view>
-  </view>
-  <view class="component-section" wx:if="{{type === 'playback'}}">
-    <view class="component-section-title">查询录像</view>
-    <view>
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-          <picker class="weui-input" mode="date" value="{{inputDate}}" bindchange="pickDate">
-            <view class="weui-input">
-              当前选择: {{inputDate}}
-            </view>
-          </picker>
+    <view class="component-section">
+      <view class="component-section-title">查询录像</view>
+      <view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <picker class="weui-input" mode="date" value="{{inputDate}}" bindchange="pickDate">
+              <view class="weui-input">
+                当前选择: {{inputDate}}
+              </view>
+            </picker>
+          </view>
         </view>
       </view>
-    </view>
-    <view class="group-button-area">
-      <button bindtap="getRecordDates" data-cmd-name="getRecordDates" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取该月录像日期
-      </button>
-      <button bindtap="getRecordVideos" data-cmd-name="getRecordVideos" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取该日录像列表
-      </button>
-    </view>
-  </view>
-  <view class="component-section" wx:if="{{type === 'playback'}}">
-    <view class="component-section-title">播放录像</view>
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <input class="weui-input" type="text" value="{{inputPlaybackTime}}" placeholder="获取有效录像列表后自动填入" placeholder-class="placeholder" bindinput="inputIPCPlaybackTime" />
+      <view class="group-button-area">
+        <button bindtap="getRecordDates" data-cmd-name="getRecordDates" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          获取该月录像日期
+        </button>
+        <button bindtap="getRecordVideos" data-cmd-name="getRecordVideos" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          获取该日录像列表
+        </button>
       </view>
     </view>
-    <view class="group-button-area">
-      <button bindtap="startPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !inputPlaybackTime}}">
-        播放
-      </button>
-      <button bindtap="stopPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime}}">
-        停止
-      </button>
+    <view class="component-section">
+      <view class="component-section-title">播放录像</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <input class="weui-input" type="text" value="{{inputPlaybackTime}}" placeholder="获取有效录像列表后自动填入" placeholder-class="placeholder" bindinput="inputIPCPlaybackTime" />
+        </view>
+      </view>
+      <view class="group-button-area">
+        <button bindtap="startPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !inputPlaybackTime}}">
+          播放
+        </button>
+        <button bindtap="stopPlayback" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !playerPlaybackTime}}">
+          停止
+        </button>
+      </view>
     </view>
-  </view>
-  <view class="component-section">
-    <view class="component-section-title">内置信令</view>
-    <view class="group-button-area" wx:if="{{type === 'live'}}">
-      <button bindtap="sendInnerCommand" data-cmd-name="getLiveStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取直播拉流状态
-      </button>
-      <button bindtap="sendInnerCommand" data-cmd-name="getVoiceStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取对讲状态
-      </button>
-    </view>
-    <view class="group-button-area" wx:if="{{type === 'playback'}}">
-      <button bindtap="sendInnerCommand" data-cmd-name="getPlaybackStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-        获取回放拉流状态
-      </button>
+    <view class="component-section">
+      <view class="component-section-title">内置信令</view>
+      <view class="group-button-area">
+        <button bindtap="sendInnerCommand" data-cmd-name="getPlaybackStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          获取回放拉流状态
+        </button>
+      </view>
     </view>
   </view>
   <view class="component-section">
