--- a/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
@@ -9,12 +9,13 @@
       <iot-p2p-player-ipc
         wx:if="{{mode === 'ipc'}}"
         id="{{playerId}}"
-        targetId="{{targetId}}" 
-        flvUrl="{{flvUrl}}" 
-        productId="{{productId}}" 
-        deviceName="{{deviceName}}" 
-        xp2pInfo="{{xp2pInfo}}" 
+        targetId="{{targetId}}"
+        flvUrl="{{flvUrl}}"
+        productId="{{productId}}"
+        deviceName="{{deviceName}}"
+        xp2pInfo="{{xp2pInfo}}"
         needCheckStream="{{needCheckStream}}"
+        liveStreamDomain="{{liveStreamDomain}}"
         needPusher="{{needPusher}}"
         needDuplex="{{needDuplex}}"
         onlyp2p="{{onlyp2p}}"
@@ -24,9 +25,9 @@
       <iot-p2p-player-server
         wx:if="{{mode === 'server'}}"
         id="{{playerId}}"
-        targetId="{{targetId}}" 
-        flvUrl="{{flvUrl}}" 
-        codeUrl="{{codeUrl}}" 
+        targetId="{{targetId}}"
+        flvUrl="{{flvUrl}}"
+        codeUrl="{{codeUrl}}"
         onlyp2p="{{onlyp2p}}"
         bind:playError="onPlayError"
         bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
