feat(demo): update demo

--- a/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxml
@@ -7,6 +7,8 @@
       enableCamera="{{enableCamera}}"
       enableMic="{{enableMic}}"
       enableAns="{{true}}"
+      audioQuality="low"
+      audioVolumeType="voicecall"
       orientation="{{orientation}}"
       bind:pusherReady="onPusherReady"
       bind:pusherStartPush="onPusherStartPush"
