--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxml
@@ -57,7 +57,8 @@
       </view>
       <view>
         record: 
-        <text class="text-btn float-right" wx:if="{{streamState === 'StreamDataReceived' || isRecording}}" bindtap="toggleRecording">{{isRecording ? '停止录像' : '开始录像'}}</text>
+        <text wx:if="{{streamState === 'StreamDataReceived' || isRecording}}" class="text-btn float-right" bindtap="toggleRecording">{{isRecording ? '停止录像' : '开始录像'}}</text>
+        <text wx:else class="text-btn float-right disabled">开始播放后才可以录像</text>
       </view>
       <view>
         <view>livePlayerInfo: </view>
