feat(demo): 添加3.0.0示例代码

--- a/demo/miniprogram/components/iot-p2p-control/control.wxml
+++ b/demo/miniprogram/components/iot-p2p-control/control.wxml
@@ -15,6 +15,7 @@
       <view>uuid: {{uuid}}</view>
       <view>moduleState: {{state}}</view>
       <view>localPeername: {{localPeername}}</view>
+      <view>localPeername2: {{localPeername2}}</view>
     </view>
   </view>
 </view>
